--- a/app/config.env
+++ b/app/config.env
@@ -1,12 +1,12 @@
-COMMON_BOT_TOKEN=7113599270:AAFAGDn3-Q7RWzFR_jidmRnrjZmU1LVhDjE
+COMMON_BOT_TOKEN=ТОКЕН БОТА
 
-POSTGRES_host=127.0.0.1
-POSTGRES_db_name=db_name
-POSTGRES_password=090807opol
-POSTGRES_user=postgres
+POSTGRES_host=ПОРТ БАЗЫ
+POSTGRES_db_name=ИМЯ БАЗЫ
+POSTGRES_password=ПАРОЛЬ БАЗЫ
+POSTGRES_user=ИМЯ ПОЛЬЗОВАТЕЛЯ
 
-WIN_ref_url=https://google.com
+WIN_ref_url=РЕФ ССЫЛКА 
 
-CHANNEL_url=https://t.me/dadasdasdadasdasdf
-CHANNEL_username=@dadasdasdadasdasdf
+CHANNEL_url=ССЫЛКА НА КАНАЛ
+CHANNEL_username=ЮЗЕРНЕЙМ КАНАЛА
 
